kubernetes/backend-deployment.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: backend 
  labels: 
    service: backend 
spec:
  replicas: 2
  selector:
    matchLabels:
      service: backend 
  template:
    metadata:
      labels: 
        service: backend 
    spec:
      containers: 
      - name: backend 
        ports:
        - containerPort: 5001
        image: ghcr.io/dnatalyaalex/python-k8s-app-backend:1.0
