kubernetes/redis-service.yaml
apiVersion: v1
kind: Service 
metadata: 
  name: redis 
spec:
  selector:
    service: redis 
  type: ClasterIP
  ports:
    - protocol: TCP 
      port: 6379
      targetPort: 6379
