kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: names-app-ingress
spec:
  ingressClassName: nginx 
  rules:
    - host: names-app
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: names-app 
              port: 
                number: 80
    - host: nginx 
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nginx-service
              port:
                number: 80
